# streamoverlay

./: .env.example  README.md  TODO.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
public/: janktuber_v1.glb  janktuber_v1_whiskers.glb
server/: pyproject.toml
server/app/: config.py  main.py
src/: api.ts  backgrounded.tsx  birbs.ts  birbs.tsx  chat.tsx  clock.tsx  color-utils.ts  index.tsx  interpolation-utils.ts  janktuber.tsx  marquee.tsx  now-playing.tsx  style.css  style.scss  three-utils.ts  twitch-auth.tsx  twitch.ts  use-face-detection.ts
